<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Matsuda, Akihit (akihito104)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="settings_title_sensitive">hide sensitive thumbnail</string>
    <string name="settings_key_sensitive" translatable="false">key_hide_sensitive_thumb</string>
    <bool name="settings_sensitive_default">true</bool>
    <string name="settings_key_loginUser" translatable="false">key_login_user</string>
    <string name="settings_title_loginUser">login account on launching</string>
    <string name="settings_loginUser_default" translatable="false">-1</string>
    <string name="settings_title_version">version</string>
    <string name="settings_key_version" translatable="false">key_version</string>
    <string name="title_share">share</string>
    <string-array name="settings_loginUser_entries">
        <item>last logged in</item>
    </string-array>
    <string-array name="settings_loginUser_values">
        <item>@string/settings_loginUser_default</item>
    </string-array>
</resources>
