<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017. Matsuda, Akihit (akihito104)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/settings_key_sensitive"
        android:title="@string/settings_title_sensitive"
        android:defaultValue="@bool/settings_sensitive_default"
        />
    <ListPreference
        android:key="@string/settings_key_loginUser"
        android:title="@string/settings_title_loginUser"
        android:dialogTitle="@string/settings_title_loginUser"
        android:entries="@array/settings_loginUser_entries"
        android:entryValues="@array/settings_loginUser_values"
        android:defaultValue="@string/settings_loginUser_default"
        />
    <Preference
        android:key="@string/settings_key_version"
        android:title="@string/settings_title_version"
        />
</PreferenceScreen>
